WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315465
[Site Isolation] Safari crashed after typing random characters in the smart search field and searching
https://bugs.webkit.org/show_bug.cgi?id=315465
Summary
[Site Isolation] Safari crashed after typing random characters in the smart s...
rupin
Reported
2026-05-24 11:54:53 PDT
rdar://176228268
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2026-05-24 12:18:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65576
EWS
Comment 2
2026-05-26 11:12:44 PDT
Committed
313901@main
(6512004572e0): <
https://commits.webkit.org/313901@main
> Reviewed commits have been landed. Closing PR #65576 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug